kube/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
 type: NodePort
 ports:
  - port: 80
    targetPort: 8080
 selector:
    app: service1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: vaidehibhagwat/service1
        ports:
        - containerPort: 8080
