kube/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: service2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        image: vaidehibhagwat/service2
        ports:
        - containerPort: 8080
